plugins {
    id 'io.franzbecker.gradle-lombok' version '5.0.0'
    id "com.github.johnrengelman.shadow" version "8.1.1" apply false
    id 'application'
    id 'java-library'

    id 'org.beryx.runtime' version '1.13.0' apply false

    id 'org.openjfx.javafxplugin' version '0.1.0'
}


wrapper {
    gradleVersion = '8.5'
}


group = 'RSPSi Editor'
version = '1.16.1'

allprojects {
    repositories {
        mavenCentral()
        mavenLocal()
        maven { url "https://repo.maven.apache.org/maven2" }
        maven { url "https://repo.adobe.com/nexus/content/repositories/public/" }
    }
}

subprojects {

    apply plugin: 'java-library'
    apply plugin: 'io.franzbecker.gradle-lombok'


    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17

    dependencies {

        api group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.10'
        api group: 'org.checkerframework', name: 'checker-qual', version: '3.21.1'
        api group: 'com.google.guava', name: 'guava', version: '31.0.1-jre'
        api group: 'com.google.code.gson', name: 'gson', version: '2.8.9'
        api 'javax.servlet:javax.servlet-api:4.0.1'
    }


    lombok { // optional: values below are the defaults
        version = "1.18.30"
    }

    compileJava {
        options.fork = true
        options.incremental = true
    }

    apply plugin: 'org.openjfx.javafxplugin'
    javafx {
        version = "17"
        modules = ['javafx.base', 'javafx.fxml', 'javafx.graphics', 'javafx.controls', 'javafx.media', 'javafx.swing']
    }

    tasks.withType(JavaExec).tap {
        configureEach {
            jvmArgs(
                    "-Dio.netty.leakDetection.level=advanced",
                    "--enable-preview",
                    "-Xmx8g",
                    "-Xms4g",
                    "-XX:+UseParallelGC",
                    "--add-exports", "java.base/sun.nio.ch=ALL-UNNAMED",
                    "--add-exports", "jdk.unsupported/sun.misc=ALL-UNNAMED",
                    "--add-opens", "jdk.unsupported/sun.misc=ALL-UNNAMED",
                    "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED",
                    "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED",
                    "--add-opens", "java.base/java.io=ALL-UNNAMED",
                    "--add-opens", "java.base/jdk.internal.misc=ALL-UNNAMED",
                    "--add-opens", "java.base/java.time=ALL-UNNAMED",
                    "--add-opens", "java.base/java.util=ALL-UNNAMED",
                    "--add-opens", "java.base/java.lang=ALL-UNNAMED"
            )
        }
    }

}
